--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
     <div class="espacio"></div>
     <article>
         <section>
-            <div>
-                <h2 style="text-align: center;">Bienvenido a mi humilde pagina web!</h2>
-                <h3 style="text-align: center;">"La belleza de  lo simple" <br> Encontraras todo mi informatica referido a la informatica y diseñador</h3>
+            <div class="bienvenido" >
+                <h2 style="text-align: center;  background: rgba(110, 108, 108, 0.144);" >Bienvenido a mi humilde pagina web!</h2>
+                <h3 style="text-align: center;  background: rgba(100, 100, 100, 0.144);">"La belleza de  lo simple" <br> Encontraras todo mi informatica referido a la informatica y diseñador</h3>
             </div>
+            <br>
         </section>
         <section>
             <div class="yoinfo">
                <h1 style="padding: 10px; font-size: 150%;"> Sobre mi: </h1><br>
                 <p style="text-align:center;" id="creador"><img src="img/yo.jpeg" alt="arian gutierrez" class="imgyo"></p>
-                Mi nombre es Arian y soy un estudiante de la Escuela tecnica N1 San Pedro ultimo año en infomatica ,tengo 18 años y casi 4 años estudiando en el area de informatica .Me gusta todo lo orientado al diseño de paginas web ,programacion , conexiones de redes y configuracion de redes inalambricas 
+               <p class="infouno">Mi nombre es Arian y soy un estudiante de la Escuela tecnica N1 San Pedro ultimo año en infomatica ,tengo 18 años y casi 4 años estudiando en el area de informatica .Me gusta todo lo orientado al diseño de paginas web ,programacion , conexiones de redes y configuracion de redes inalambricas </p>
+             
             </div>
         </section>
         <section>
