--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section>
             <div class="bienvenido" >
                 <h2 style="text-align: center;  background: rgba(110, 108, 108, 0.144);" >Bienvenido a mi humilde pagina web!</h2>
-                <h3 style="text-align: center;  background: rgba(100, 100, 100, 0.144);">"La belleza de  lo simple" <br> Encontraras toda mi informacion referido a la informatica y diseñador</h3>
+                <h3 style="text-align: center;  background: rgba(100, 100, 100, 0.144);">"La belleza de  lo simple" <br> Encontraras toda mi informacion referido a la informatica y diseñador WEB</h3>
             </div>
             <br>
         </section>
