--- a/index.html
+++ b/index.html
@@ -3,30 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="css/styles.css">
     <title>WebArian</title>
 </head>
 <body>
-             <div class="titulo" id="menu"><h1>Arian Gutierrez <marquee width=400 direction=up>  Desarrollador web <br><br><br>  Programador</marquee></div>
+             <div class="titulo" id="menu"><h1>Arian Gutierrez <marquee width=400 direction=up>  Desarrollador web <br><br><br>  Programador</h1></marquee></div>
     <header>
             <a href="#contactame"  class="menu">Contactame</a>
             <a href="#creador" class="menu">Creador</a>
             <a href="#experiencia" class="menu">Experiencia</a>
             <a href="consulta.html" class="menu">Consulta</a>
     </header>
-    <div class="espacio"></div>
+    
+    <div style="text-align: center;"><img   class="espacio" src="img/esapcio.gif" alt=""></div>
     <article>
         <section>
             <div class="bienvenido" >
-                <h2 style="text-align: center;  background: rgba(110, 108, 108, 0.144);" >Bienvenido a mi humilde pagina web!</h2>
-                <h3 style="text-align: center;  background: rgba(100, 100, 100, 0.144);">"La belleza de  lo simple" <br> Encontraras toda mi informacion referido a la informatica y diseñador WEB</h3>
+                <h2 class="h" >Bienvenido a mi humilde pagina web!</h2>
+                <h3 class="h">"La belleza de  lo simple" <br> Encontraras todo mi informatica referido a la informatica y diseñador</h3>
             </div>
             <br>
         </section>
         <section>
             <div class="yoinfo">
-               <h1 style="padding: 10px; font-size: 150%;"> Sobre mi: </h1><br>
+               <h1 class="sobrmi" >Sobre mi: </h1><br>
                 <p style="text-align:center;" id="creador"><img src="img/yo.jpeg" alt="arian gutierrez" class="imgyo"></p>
                <p class="infouno">Mi nombre es Arian y soy un estudiante de la Escuela tecnica N1 San Pedro ultimo año en infomatica ,tengo 18 años y casi 4 años estudiando en el area de informatica .Me gusta todo lo orientado al diseño de paginas web ,programacion , conexiones de redes y configuracion de redes inalambricas </p>
              
@@ -37,7 +38,7 @@
                 <h2 id="experiencia">Experiencias</h2>
                     <p style="text-align: center;">
                      <a href="https://es.wikipedia.org/wiki/HTML"><img src="img/HTML5_Logo.png" alt="html" class="img"></a>
-                     <a href="https://es.wikipedia.org/wiki/Hoja_de_estilos_en_cascada"><img src="img/css-3-logo.png" alt="css" class="img"></a>
+                     <a href="https://es.wikipedia.org/wiki/Hoja_de_estilos_en_cascada"><img src="img/css-3-logo.png" alt="css" style="width: 14.5%;" class="img"></a>
                      <a href="https://es.wikipedia.org/wiki/PHP"></a><img src="img/php.png" alt="php" class="img"></a>
                 </p>
             </div>
@@ -49,8 +50,8 @@
     <footer>
                 <li id="contactame">Contactame: 3329566988</li>
                 <li>ariangabirelgutierrez@gmail.com</li>
-                <a href="https://www.instagram.com/arian.sito/"><img src="img/instagram.png" style="width: 5%;"></a>
-                <a href="https://www.facebook.com/arian.gutierrez.5"><img src="img/facebook.png" style="width: 5%;"></a>
+                <a href="https://www.instagram.com/arian.sito/"><img src="img/instagram.png" style="width: 50px;"></a>
+                <a href="https://www.facebook.com/arian.gutierrez.5"><img src="img/facebook.png" style="width: 50px;"></a>
     </footer>
 </body>
 </html>
