--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section>
             <div class="bienvenido" >
                 <h2 class="h" >Bienvenido a mi humilde pagina web!</h2>
-                <h3 class="h">"La belleza de  lo simple" <br> Encontraras todo mi informatica referido a la informatica y diseñador</h3>
+                <h3 class="h">"La belleza de  lo simple" <br> Encontraras toda mi informacion referido a la informatica y diseñador Web</h3>
             </div>
             <br>
         </section>
