--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a href="#contactame"  class="menu">Contactame</a>
             <a href="#creador" class="menu">Creador</a>
             <a href="#experiencia" class="menu">Experiencia</a>
+            <a href="consulta.php" class="menu">consulta</a>
     </header>
     
     <div style="text-align: center;"><img   class="espacio" src="img/esapcio.gif" alt=""></div>
