--- a/consulta.html
+++ b/consulta.html
@@ -8,7 +8,7 @@
 	<title>WebArian</title>
 </head>
 <body>
-    <form method="post" action="sendMail("ariangabrielgutierrez@gmail.com"); return false">
+    <form method="post" action="sendMail(ariangabrielgutierrez@gmail.com)"; return false">
         <div class="formulario">
             <h1>consulta</h1>
             <input type="email" name="email" placeholder="Email" size="30" ><br>
