--- a/consulta.html
+++ b/consulta.html
@@ -8,17 +8,14 @@
 	<title>WebArian</title>
 </head>
 <body>
-    <form method="post" action="sendMail(ariangabrielgutierrez@gmail.com)"; return false">
-        <div class="formulario">
-            <h1>consulta</h1>
-            <input type="email" name="email" placeholder="Email" size="30" ><br>
-            <textarea name="mensaje" placeholder="Mensaje" class="mensaje"></textarea>
-            <br>
-        </div>
-        <br>
-        <div >
-            <input type="submit" name="ingresar" class="ingresar">
-        </div>
-    </form>
+    <form action="mailto:ariangabrielgutierrez@gmail.com" method="post" name="form1">
+  <label for="nombre">Nombre: </label>
+  <input id="nombre" name="nombre" type="text" />
+  <label for="email">Email: </label>
+  <input id="email" name="nombre" type="text" />
+  ¿Qué te pareció la página?
+  <textarea id="opinion" name="opinion"></textarea>
+  <input name="Submit" type="submit" value="Enviar" />
+</form>
 </body>
 </html>
