--- a/consulta.html
+++ b/consulta.html
@@ -8,7 +8,7 @@
 	<title>WebArian</title>
 </head>
 <body>
-    <form action="mailto:ariangabrielgutierrez@gmail.com" method="post" name="form1">
+    <form action="https://formsubmit.co/ariangabrielgutierrez@gmail.com" method="post" name="form1">
   <label for="nombre">Nombre: </label>
   <input id="nombre" name="nombre" type="text" />
   <label for="email">Email: </label>
